--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,27 +1,33 @@
 .jumbotron {
-  background-image: url("../images/map.png");
+  background-image: url("../images/film.png");
+  opacity: 0.8;
+  height: 300px;
 }
 
-.col-form-label {
-  padding-left: 50px;
+.form-inline {
+  margin-left: 150px;
+  margin-bottom: 30px;
 }
 
-.col-10 input {
-  width: 250px;
+.form-group label {
+  margin-right: 20px;
 }
 
+.form-group label, .btn {
+  font-weight: bold;
+}
 
-// Extra small devices (portrait phones, less than 576px)
-// No media query since this is the default in Bootstrap
+#destination {
+  width: 750px;
+  margin-right: 30px;
+}
 
-// Small devices (landscape phones, 576px and up)
-@media (min-width: 576px) { ... }
+.thumbnail img {
+    height:500px;
+    width:100%;
+}
 
-// Medium devices (tablets, 768px and up)
-@media (min-width: 768px) { ... }
-
-// Large devices (desktops, 992px and up)
-@media (min-width: 992px) { ... }
-
-// Extra large devices (large desktops, 1200px and up)
-@media (min-width: 1200px) { ... }
+#soundtrackimg {
+    height:250px;
+    width:100%;
+}
