--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,30 +1,72 @@
-.jumbotron {
-  background-image: url("../images/film.png");
-  opacity: 0.8;
-  height: 300px;
+body {
+     margin: 0;
+     background: url(../images/background.png);
+     font-family: "Comic Sans MS", cursive, sans-serif
 }
 
-.form-inline {
-  margin-left: 150px;
-  margin-bottom: 30px;
+h1 {
+  font-size: 10rem;
 }
 
-.form-group label {
-  margin-right: 20px;
+h1, .form-inline  {
+    left: 0;
+    line-height: 200px;
+    margin: auto;
+    margin-top: -100px;
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
 }
 
-.form-group label, .btn {
+.form-inline  {
+    margin-top: -30px;
+    font-size: 2rem;
+}
+
+.error {
+  left: 0;
+  line-height: 200px;
+  margin: auto;
+  margin-top: -30px;
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  text-align: center;
+}
+
+.form-control, .btn {
   font-weight: bold;
+  border: 2px solid black;
 }
 
 #destination {
-  width: 750px;
+  width: 250px;
   margin-right: 30px;
 }
 
+.thumbnail {
+  border: 2px solid black;
+  height:500px;
+  width:100%;
+}
+
 .thumbnail img {
-    height:500px;
-    width:100%;
+    height:300px;
+    width:75%;
+    padding: 10px;
+}
+
+.thumbnail h3 {
+  margin: 5px;
+}
+
+.thumbnail .caption {
+  padding-top: 0px;
+}
+
+#albums {
+  height:400px;
 }
 
 #soundtrackimg {
