--- a/public/templates/soundtrack.html
+++ b/public/templates/soundtrack.html
@@ -1,11 +1,30 @@
+<!-- <nav> -->
+<nav class="navbar navbar-static-top navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Movie Search</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li><a href="#!/">Search</a></li>
+      <li><a href ng-click="return()">Return to Movie</a></li>
+      <li><a href="#!/favorites">Favorites</a></li>
+    </ul>
+  </div>
+</nav>
+<!-- /navbar -->
 <div class="row">
-  <div ng-repeat="track in vm.tracks" class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <img id="soundtrackimg" src={{track.album.images[0].url}} alt="..." href={{track.href}}>
+  <div ng-hide="vm.albums.length > 0">
+    <h1>No Albums Found!</h1>
+    <a class="error" href ng-click="return()" class="btn btn-default" role="button">Return to Movies!</a>
+  </div>
+  <div ng-repeat="album in vm.albums" class="col-sm-6 col-md-4">
+    <div class="thumbnail" id='albums'>
+      <img id="soundtrackimg" ng-if="album.images[0].url !== 'N/A'" src={{album.images[0].url}} alt="Album Cover">
+      <img id="soundtrackimg" ng-if="album.images[0].url == 'N/A'" src="../images/not-found.png" alt="Album Cover Not Found">
       <div class="caption">
-        <h3>{{track.name}}</h3>
-          <p>Artist: {{track.artists[0].name}}</p>
-        <p><a href="#!/movie/{{movie.Title}}" class="btn btn-primary" role="button">Movie</a> <a href="#" class="btn btn-default" role="button">Youtube</a> <a href="#" class="btn btn-default" role="button">Add Favorites</a></p>
+        <h3>{{album.name}}</h3>
+          <p>Artist: {{album.artists[0].name}}</p>
+        <p><a href="{{album.external_urls.spotify}}" class="btn btn-default" role="button">Play on Spotify</a><a href="#!/favorites" class="btn btn-default" role="button">Add Favorites</a></p>
       </div>
     </div>
   </div>
