--- a/public/templates/video.html
+++ b/public/templates/video.html
@@ -1,3 +1,31 @@
-<div>  
-  <h1> Events go here </h1> 
+<!-- <nav> -->
+<nav class="navbar navbar-static-top navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Movie Search</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li><a href="#!/">Search</a></li>
+      <li><a href ng-click="return()">Return to Movie</a></li>
+      <li><a href="#!/favorites">Favorites</a></li>
+    </ul>
+  </div>
+</nav>
+<!-- /navbar -->
+<div class="row">
+  <div ng-show="vm.videos.length < 1">
+    <h1>No Videos Found!</h1>
+    <a class="error" href ng-click="return()" class="btn btn-default" role="button">Return to Movies!</a>
+  </div>
+  <div ng-repeat="video in vm.videos" class="col-sm-6 col-md-4">
+    <div class="thumbnail">
+      <img id="soundtrackimg" ng-if="album.images[0].url !== 'N/A'" src={{video.snippet.thumbnails.medium.url}} alt="Video Image">
+      <img id="soundtrackimg" ng-if="album.images[0].url == 'N/A'" src="../images/not-found.png" alt="Video Image Not Found">
+      <div class="caption">
+        <h3>{{video.snippet.title}}</h3>
+          <p>Description: {{video.snippet.description}}</p>
+        <p><a href="https://www.youtube.com/watch?v={{video.id.videoId}}" class="btn btn-default" role="button">Watch on Youtube</a><a href="#" class="btn btn-default" role="button">Add Favorites</a></p>
+      </div>
+    </div>
+  </div>
 </div>
