--- a/public/templates/search.html
+++ b/public/templates/search.html
@@ -19,7 +19,7 @@
   <form class="form-inline">
     <div class="form-group">
       <input type="text" class="form-control" id="destination" placeholder="Guardians of the Galaxy" ng-model="vm.movieSearch">
+      <button type="button" class="btn btn-outline-info" ng-click="vm.search()">Search</button>
     </div>
-    <button type="button" class="btn btn-default" ng-click="vm.search()">Search</button>
   </form>
 </div
