--- a/public/templates/movie.html
+++ b/public/templates/movie.html
@@ -1,5 +1,5 @@
 <!-- <nav> -->
-<nav class="navbar navbar-static-top navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Movie Search</a>
@@ -23,7 +23,7 @@
       <div class="caption">
         <h3>{{movie.Title}}</h3>
         <p>{{movie.info.Plot}}</p>
-        <p><a href="#!/soundtrack/{{movie.Title}}" class="btn btn-default" role="button">Sountrack</a> <a href="#!/video/{{movie.Title}}" class="btn btn-default" role="button">YouTube</a> <a href="#" class="btn btn-default" role="button" ng-click="vm.addFavorite(movie)">Add Favorites</a></p>
+        <p><a href="#!/soundtrack/{{movie.Title}}" class="btn btn-outline-info" role="button">Soundtracks</a> <a href="#!/video/{{movie.Title}}" class="btn btn-outline-info" role="button">Videos</a> <a href="" class="btn btn-outline-info" role="button" ng-click="vm.addFavorite(movie)">Add Favorites</a></p>
       </div>
     </div>
   </div>
