--- a/public/templates/soundtrack.html
+++ b/public/templates/soundtrack.html
@@ -1,21 +1,21 @@
 <!-- <nav> -->
-<nav class="navbar navbar-static-top navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Movie Search</a>
     </div>
     <ul class="nav navbar-nav">
       <li><a href="#!/">Search</a></li>
-      <li><a href ng-click="return()">Return to Movie</a></li>
+      <li><a href ng-click="vm.return()">Return to Movie</a></li>
       <li><a href="#!/favorites">Favorites</a></li>
     </ul>
   </div>
 </nav>
 <!-- /navbar -->
 <div class="row">
-  <div ng-hide="vm.albums.length > 0">
+  <div ng-show="vm.albums.length < 1">
     <h1>No Albums Found!</h1>
-    <a class="error" href ng-click="return()" class="btn btn-default" role="button">Return to Movies!</a>
+    <a class="error" ng-click="vm.return()" class="btn btn-default" role="button">Return to Movies!</a>
   </div>
   <div ng-repeat="album in vm.albums" class="col-sm-6 col-md-4">
     <div class="thumbnail" id='albums'>
@@ -24,7 +24,7 @@
       <div class="caption">
         <h3>{{album.name}}</h3>
           <p>Artist: {{album.artists[0].name}}</p>
-        <p><a href="{{album.external_urls.spotify}}" class="btn btn-default" role="button">Play on Spotify</a><a href="#!/favorites" class="btn btn-default" role="button">Add Favorites</a></p>
+        <p><a href="{{album.external_urls.spotify}}" class="btn btn-outline-info" role="button">Play on Spotify</a><a href="#!/favorites" class="btn btn-outline-info" role="button">Add Favorites</a></p>
       </div>
     </div>
   </div>
