--- a/public/templates/video.html
+++ b/public/templates/video.html
@@ -1,12 +1,12 @@
 <!-- <nav> -->
-<nav class="navbar navbar-static-top navbar-inverse">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="#">Movie Search</a>
     </div>
     <ul class="nav navbar-nav">
       <li><a href="#!/">Search</a></li>
-      <li><a href ng-click="return()">Return to Movie</a></li>
+      <li><a href ng-click="vm.return()">Return to Movie</a></li>
       <li><a href="#!/favorites">Favorites</a></li>
     </ul>
   </div>
@@ -15,7 +15,7 @@
 <div class="row">
   <div ng-show="vm.videos.length < 1">
     <h1>No Videos Found!</h1>
-    <a class="error" href ng-click="return()" class="btn btn-default" role="button">Return to Movies!</a>
+    <a class="error" href ng-click="vm.return()" class="btn btn-default" role="button">Return to Movies!</a>
   </div>
   <div ng-repeat="video in vm.videos" class="col-sm-6 col-md-4">
     <div class="thumbnail">
@@ -24,7 +24,7 @@
       <div class="caption">
         <h3>{{video.snippet.title}}</h3>
           <p>Description: {{video.snippet.description}}</p>
-        <p><a href="https://www.youtube.com/watch?v={{video.id.videoId}}" class="btn btn-default" role="button">Watch on Youtube</a><a href="#" class="btn btn-default" role="button">Add Favorites</a></p>
+        <p><a href="https://www.youtube.com/watch?v={{video.id.videoId}}" class="btn btn-outline-info" role="button">Watch on Youtube</a><a href="#" class="btn btn-outline-info" role="button">Add Favorites</a></p>
       </div>
     </div>
   </div>
