--- a/public/templates/movie.html
+++ b/public/templates/movie.html
@@ -6,7 +6,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li><a href="#!/">Search</a></li>
-      <li><a href="#!/favorites">Favorites</a></li>
+      <li><a href="#!/api/searches">Recent Searches</a></li>
     </ul>
   </div>
 </nav>
@@ -21,9 +21,9 @@
       <img ng-if="movie.Poster !== 'N/A'" src={{movie.Poster}} alt="Movie Poster">
       <img ng-if="movie.Poster == 'N/A'" src="../images/not-found.png" alt="Movie Poster Not Found">
       <div class="caption">
-        <h3>{{movie.Title}}</h3>
+        <h3 ng-href="{{movie.info.Website}}" >{{movie.Title}}</h3>
         <p>{{movie.info.Plot}}</p>
-        <p><a href="#!/soundtrack/{{movie.Title}}" class="btn btn-outline-info" role="button">Soundtracks</a> <a href="#!/video/{{movie.Title}}" class="btn btn-outline-info" role="button">Videos</a> <a href="" class="btn btn-outline-info" role="button" ng-click="vm.addFavorite(movie)">Add Favorites</a></p>
+        <p><a href="#!/soundtrack/{{movie.Title}}" class="btn btn-outline-info" role="button">Soundtracks</a> <a href="#!/video/{{movie.Title}}" class="btn btn-outline-info" role="button">Videos</a> <a ng-if="movie.info.Website !== 'N/A'" ng-hide="!movie.info.Website" ng-href={{movie.info.Website}} class="btn btn-outline-info" role="button">Website</a>
       </div>
     </div>
   </div>
