--- a/public/templates/search.html
+++ b/public/templates/search.html
@@ -5,7 +5,7 @@
       <a class="navbar-brand" href="#">Movie Search</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a href="#!/favorites">Favorites</a></li>
+      <li><a href="#!/api/searches">Recent Searches</a></li>
     </ul>
 <!--         <ul class="nav navbar-nav navbar-right">
       <li><a href="#!/register"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
