--- a/public/templates/soundtrack.html
+++ b/public/templates/soundtrack.html
@@ -7,7 +7,7 @@
     <ul class="nav navbar-nav">
       <li><a href="#!/">Search</a></li>
       <li><a href ng-click="vm.return()">Return to Movie</a></li>
-      <li><a href="#!/favorites">Favorites</a></li>
+      <li><a href="#!/api/searches">Recent Searches</a></li>
     </ul>
   </div>
 </nav>
@@ -24,7 +24,7 @@
       <div class="caption">
         <h3>{{album.name}}</h3>
           <p>Artist: {{album.artists[0].name}}</p>
-        <p><a href="{{album.external_urls.spotify}}" class="btn btn-outline-info" role="button">Play on Spotify</a><a href="#!/favorites" class="btn btn-outline-info" role="button">Add Favorites</a></p>
+        <p><a href="{{album.external_urls.spotify}}" class="btn btn-outline-info" role="button">Play on Spotify</a>
       </div>
     </div>
   </div>
