--- a/public/templates/movie.html
+++ b/public/templates/movie.html
@@ -6,7 +6,7 @@
     </div>
     <ul class="nav navbar-nav">
       <li><a href="#!/">Search</a></li>
-      <li><a href="#!/api/searches">Recent Searches</a></li>
+      <li><a href="#!/searches">Recent Searches</a></li>
     </ul>
   </div>
 </nav>
