--- a/public/templates/video.html
+++ b/public/templates/video.html
@@ -6,8 +6,8 @@
     </div>
     <ul class="nav navbar-nav">
       <li><a href="#!/">Search</a></li>
-      <li><a href ng-click="vm.return()">Return to Movie</a></li>
-      <<li><a href="#!/api/searches">Recent Searches</a></li>
+      <li><a href ng-click="vm.return()">Return to Movies</a></li>
+      <<li><a href="#!/searches">Recent Searches</a></li>
     </ul>
   </div>
 </nav>
