changed font family

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   background: url(../images/background.png);
   background-repeat: repeat-y;
-  font-family: "Comic Sans MS", cursive, sans-serif
+  font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif
 }
 
 h1 {
